--- a/Input Field Text Animation 2/index.html
+++ b/Input Field Text Animation 2/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Input Field Text Animation</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Input Field Text Animation</title>
 
-    </head>
-
-  <body>
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.png"> 
+</head>
+<body>
+  <div class="inputBox">
+    <input type="text" required="required">
+    <label for="">Nombre</label>
+    </div>
     <div class="inputBox">
-      <input type="text" required="required">
-      <label for="">Nombre</label>
-     </div>
-     <div class="inputBox">
-      <input type="text" required="required">
-      <label for="">Apellido</label>
-     </div>
-  </body>
+    <input type="text" required="required">
+    <label for="">Apellido</label>
+    </div>
+</body>
 </html>
