--- a/Show Hide Password 3/index.html
+++ b/Show Hide Password 3/index.html
@@ -17,6 +17,7 @@
 
   <!--==================== ICONO DE PESTAÑA ====================-->
   <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.png"> 
 
   <!--==================== ICONOS ====================-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
